# branchfs

./: .gitignore  README.md  pyproject.toml
demo/: README.md  ai_exploration.py
src/branchfs/: __init__.py  api.py  branch.py  cli.py  fallback.py  fuse_fs.py  snapshot.py  store.py  visualize.py
tests/: test_api.py  test_branch.py  test_cli.py  test_fallback.py  test_integration.py  test_snapshot.py  test_store.py  test_visualize.py
